@@ -41,6 +41,7 @@ $ -> Language fix or change
  + [#30364] Add UNION ALL feature from platform.  Thanks Elin
  ^ [#30180] argument three in phpdoc should be the variable name.  Thanks Alexander
  ^ [#30365] Fix code style in admin modules: mod_login.  Thanks Javier
+ # [#30260] Fix for Undefined index: custom_position.  Thanks Peter
 
 24-Mar-2013 Jean-Marie Simonet
  # [#30234] Route work classes for Tags. Thanks Elin
